upd swagger and add readme
