# docs/swagger.json
@@ -164,7 +164,7 @@
                     {
                         "type": "string",
                         "description": "path format",
-                        "name": "id",
+                        "name": "sub_id",
                         "in": "path",
                         "required": true
                     }
@@ -212,7 +212,7 @@
                     {
                         "type": "string",
                         "description": "path format",
-                        "name": "id",
+                        "name": "sub_id",
                         "in": "path",
                         "required": true
                     },
@@ -266,7 +266,7 @@
                     {
                         "type": "string",
                         "description": "path format",
-                        "name": "id",
+                        "name": "sub_id",
                         "in": "path",
                         "required": true
                     }
