# internal/controllers/http/get_subscription.go
@@ -34,7 +34,7 @@ func NewGetSubController(
 // @Description Запрос на получение подписки по ее ID
 // @Tags subscriptions
 // @Produce      json
-// @Param 	     id path string true "path format"
+// @Param 	     sub_id path string true "path format"
 // @Success 	 200 {object} responses.SubResponse
 // @Failure 	 400 {object} string "некорректный формат запроса"
 // @Failure      404 {object} string "подписка не найдена"
